[package]
name = "wke-sys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
winit = "0.29"
widestring = "1.1"
windows = { version="0.54", features=["Win32_Foundation", "Win32_Graphics_Gdi",
 "Win32_UI_WindowsAndMessaging", "Win32_System_LibraryLoader", 
 "Win32_UI_Shell", "Win32_UI_Input_KeyboardAndMouse",
 "Win32_System_SystemServices", "Win32_UI_HiDpi", "Win32_UI_Input_Ime", "Win32_Globalization"] }