[package]
name = "wke-sys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[dev-dependencies]
winit = {version="0.30" }
widestring = "1.1"
windows-sys = { version = "0.52.0", features = ["Win32_UI_Input", "Win32_UI_WindowsAndMessaging"] }
softbuffer = "0.4.3"
